# cred

./: .gitignore  AGDA_PLAN.md  BRAINSTORM.md  CLAUDE.md  Makefile  PROOF_ASSISTANT.md  README.md  TYPECHECKER.md  cred.bib
credtt-impl/src/: check.ml  context.ml  credence.ml  dune  elaborate.ml  error.ml  eval.ml  lexer.mll  main.ml  neighbourhood.ml  parser.mly  proof.ml  raw.ml  subst.ml  syntax.ml
credtt-impl/test/: dune  test_check.ml  test_credence.ml  test_dynamics.ml  test_elaborate.ml  test_infer.ml  test_integration.ml  test_neighbourhood.ml  test_proof.ml
credtt-impl/test/examples/: agda_style.ptt  credence_mul.ptt  credences.ptt  identity.ptt  implicits.ptt  no_semicolons.ptt  pair.ptt  weakening.ptt
credtt-impl/test/proofs/: classical_collapse.ctt  contradiction.ptt  credence_infer.ptt  double_negation.ptt  ex_falso.ptt  godel_fixpoint.ptt  graded_choice.ptt  infer_fixpoint.ptt  infer_underscore.ptt  invalid_conclude_unknown.ptt  invalid_contradict_unknown.ptt  invalid_unknown_ref.ptt  modus_ponens.ptt  modus_tollens.ptt  self_consistency.ptt  sqrt2.ptt  stability_contradiction.ctt  stability_deduction.ctt
credtt-impl/test/proofs/techniques/: 01_direct_proof.ctt  02_proof_by_cases.ctt  03_contraposition.ctt  04_reductio.ctt  05_ex_falso.ctt  06_vacuous_truth.ctt  07_deduction_theorem.ctt  08_modus_ponens.ctt  09_syllogism.ctt  10_universal_gen.ctt  11_existential.ctt  12_induction.ctt  13_exhaustion.ctt  14_construction.ctt  15_refutation.ctt  16_equational.ctt  17_analogy.ctt  18_structural.ctt  19_stability_proof.ctt  20_credence_bounds.ctt  21_continuity.ctt  22_degeneracy.ctt  23_contractivity.ctt  24_factoring.ctt  25_dual_proof.ctt  26_limit_theorem.ctt  (+3 more)
probtt-impl/test/: dune  test_check.ml  test_infer.ml  test_integration.ml  test_proof.ml  test_weight.ml
probtt-impl/test/examples/: agda_style.ptt  ex_falso.ptt  identity.ptt  no_semicolons.ptt  pair.ptt  simple.ptt  unit.ptt  weakening.ptt  weight_mul.ptt  weights.ptt
probtt-impl/test/proofs/: contradiction.ptt  double_negation.ptt  ex_falso.ptt  godel_fixpoint.ptt  graded_choice.ptt  infer_fixpoint.ptt  infer_underscore.ptt  invalid_contradict_unknown.ptt  invalid_unknown_ref.ptt  modus_ponens.ptt  modus_tollens.ptt  self_consistency.ptt  sqrt2.ptt  weight_infer.ptt
(+334 files in other folders)
