(library
 (name credtt_lib)
 (public_name credtt.lib)
 (modules credence neighbourhood syntax subst context eval error check raw elaborate proof)
 (libraries str))

(library
 (name credtt_parser)
 (modules parser lexer)
 (libraries credtt_lib))

(executable
 (name main)
 (public_name credtt)
 (modules main)
 (libraries credtt_lib credtt_parser))

(menhir
 (modules parser))

(ocamllex lexer)
